--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,7 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  max-height: 80;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -19,8 +10,24 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.Picker {
+  margin-left: 20% ;
+  margin-top: 3%  ;
+}
+
+.Input-Box {
+  display: flex;
+  margin-left: 5% ;
+  margin-top: 4%  ;
+  margin-bottom: 10% ;
+}
+
+.Label {
+  margin-right: 5% ;
+}
+
+.Input {
+  height: 30;
 }
 
 @keyframes App-logo-spin {
